<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:icon="@drawable/home_selector_feed"
            android:id="@+id/home_feed"
            android:title="@string/cards"
            app:showAsAction="ifRoom" />
    <item
            android:icon="@drawable/home_selector_workouts"
            android:id="@+id/home_dashboard"
            android:title="@string/home"
            app:showAsAction="ifRoom" />


    <item
            android:icon="@drawable/home_selector_barchart"
            android:id="@+id/home_stats"
            android:title="@string/library"
            app:showAsAction="ifRoom" />

    <item
            android:icon="@drawable/profile"
            android:id="@+id/home_profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />

<!--    <item-->
<!--            android:icon="@drawable/home_selector_premium"-->
<!--            android:id="@+id/home_premium"-->
<!--            android:title="@null"-->
<!--            app:showAsAction="ifRoom" />-->
</menu>