<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:aapt="http://schemas.android.com/aapt"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_huge"
        android:paddingRight="@dimen/margin_huge"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_big"
            android:text="@string/complete_your_profile"
            android:textAlignment="center"
            style="@style/SurveyHeaderStyle"/>


    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
        />

    <EditText
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/calendar_not_this_month"
            android:id="@+id/register_username"
            android:background="@null"
            android:paddingLeft="@dimen/margin_big"
            android:paddingTop="22dp"
            android:paddingRight="@dimen/margin_big"
            android:paddingBottom="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_username"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_"
            android:inputType="textFilter"
            android:textCursorDrawable="@null"
           android:fontFamily="@font/gilroy_regular"/>

    <View
            android:background="@color/divider_register"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <EditText
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/calendar_not_this_month"
            android:id="@+id/register_fullname"
            android:background="@null"
            android:paddingLeft="@dimen/margin_big"
            android:paddingTop="22dp"
            android:paddingRight="@dimen/margin_big"
            android:paddingBottom="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/gilroy_regular"/>

    <View
            android:background="@color/divider_register"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <EditText
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/calendar_not_this_month"
            android:id="@+id/register_email"
            android:background="@null"
            android:paddingLeft="@dimen/margin_big"
            android:paddingTop="22dp"
            android:paddingRight="@dimen/margin_big"
            android:paddingBottom="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
           android:fontFamily="@font/gilroy_regular"/>

    <View
            android:background="@color/divider_register"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textColorHint="@color/calendar_not_this_month"
                android:id="@+id/register_password"
                android:background="@null"
                android:paddingLeft="@dimen/margin_big"
                android:paddingTop="22dp"
                android:paddingRight="@dimen/margin_big"
                android:paddingBottom="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_password"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_"
                android:inputType="textWebPassword"
                android:fontFamily="@font/gilroy_regular"/>

        <ImageView
                android:layout_gravity="right|center_vertical|center_horizontal|center|end"
                android:id="@+id/register_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_eye"/>
    </FrameLayout>
</LinearLayout>
