<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:aapt="http://schemas.android.com/aapt"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_huge"
        android:paddingRight="@dimen/margin_huge"
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

    <View android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_weight="0.5">

    </View>

    <TextView
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/goals"
            android:layout_gravity="center_horizontal"
            style="@style/SurveyHeaderStyle"
            android:fontFamily="@font/gilroy_bold"
           />

    <TextView
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/switch_text_color_unselected"
            android:id="@+id/goals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:text="@string/choose_goals"
            android:fontFamily="@font/gilroy_bold"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/goals_build_muscle"
            android:background="@drawable/offer_unselected"
            android:focusable="true" android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:foreground="?attr/selectableItemBackground"
            >

        <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margin_big"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/goals_build_muscle_check"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/build_muscle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/gilroy_bold"
                    />


            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_build_muscle_description"
                    android:fontFamily="@font/gilroy_bold"
                    />
        </LinearLayout>


        <ImageView
                android:id="@+id/goals_build_muscle_check"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:src="@drawable/blue_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/goals_build_strength"
            android:background="@drawable/offer_unselected"
            android:focusable="true" android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:foreground="?attr/selectableItemBackground"
            >

        <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margin_big"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/goals_build_strength_check"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/build_strength"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/gilroy_bold"
                    />

            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_build_strength_description"
                    android:fontFamily="@font/gilroy_bold"/>
        </LinearLayout>

        <ImageView
                android:id="@+id/goals_build_strength_check"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:src="@drawable/blue_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/goals_lose_fat"
            android:background="@drawable/offer_unselected"
            android:focusable="true" android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:foreground="?attr/selectableItemBackground"
            >

        <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margin_big"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/goals_lose_fat_check"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lose_fat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/gilroy_bold"/>

            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_lose_fat_description"
                    android:fontFamily="@font/gilroy_bold"/>
        </LinearLayout>

        <ImageView android:id="@+id/goals_lose_fat_check"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:src="@drawable/blue_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
