<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInScreen.SignInActivity">


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbcg"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_cover_grad"/>
    
    <TextView
            android:id="@+id/signin_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/gilroy_regular"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/signin_entry"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_createprofilebutton"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_bold"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/signin_forgot"/>

    <EditText
            android:drawableLeft="@drawable/ic_lock_small"
            android:drawablePadding="5dp"
            android:id="@+id/signin_input_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/sign_in_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:paddingStart="15dp"
            android:fontFamily="@font/gilroy_regular"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/signin_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/signin_entry"/>


    <EditText
            android:drawableLeft="@drawable/ic_person_24dp"
            android:id="@+id/signin_input_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/sign_in_input"
            android:hint="@string/login_or_email"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:drawablePadding="5dp"
            android:paddingStart="15dp"
            android:fontFamily="@font/gilroy_regular"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/signin_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/signin_input_password"/>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/signin_input_login"
            app:layout_constraintBottom_toTopOf="@id/signin_input_login"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="Sign in"/>



</androidx.constraintlayout.widget.ConstraintLayout>